# trucksystem

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
