[package]
name = "trucksystem"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "trucksystem_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 🤖 THE BYPASS: Tool to auto-click the SDK "OK" button
enigo = "0.1.2"

# 🚀 THE ENGINE: The official Microsoft Windows crate (replaces winapi)
# This includes the memory tools and window management tools needed for the logic
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Memory", "Win32_UI_WindowsAndMessaging"] }

[profile.dev]
incremental = true 

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
